--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@headless-tree/react": "^1.4.0",
     "@hookform/resolvers": "^5.2.1",
     "@remixicon/react": "^4.6.0",
+    "@supabase/supabase-js": "^2.90.1",
     "@tailwindcss/vite": "^4.1.12",
     "@tanstack/react-query": "^5.85.5",
     "@tanstack/react-query-devtools": "^5.85.5",
