--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "format": "prettier --write .",
     "preview": "vite preview",
     "create-demo-user": "tsx scripts/create-demo-user.js",
-    "debug-auth": "tsx scripts/debug-auth.js"
+    "debug-auth": "tsx scripts/debug-auth.js",
+    "tauri": "tauri",
+    "tauri:dev": "tauri dev",
+    "tauri:build": "tauri build"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
@@ -68,6 +71,7 @@
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.6.2",
+    "@tauri-apps/cli": "^2.9.6",
     "@types/node": "^24.3.0",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
